# Pyramid_of_Stars

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pyramidwindow.cpp  pyramidwindow.h
doc/: Build.md
src/: main.cpp
src/pyramid/: pyramid.cpp  pyramid.h
src/ui/: pyramidwindow.cpp
tests/: pyramidwindow_test.cpp
